# fiscal-checks

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dc.sh  docker-compose.yaml  downgrade-db.sh  entrypoint.sh  gunicorn.conf.py  makemigrations.sh  migrate-db.sh  psql.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 190d25b9cc44_check_models.py  7ef545d69f2f_check_symbols.py  a72aabf7d393_create_user_model.py
src/: main.py
src/base/: __init__.py  dependencies.py  models.py  router.py  service.py
src/checks/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
src/checks/templates/: check.html
src/conf/: app_instance.py  db.py  exception_handlers.py  exceptions.py  logging.py  routers.py  schemas.py  settings.py
src/users/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
